--- a/app/views/boards/show.html.slim
+++ b/app/views/boards/show.html.slim
@@ -27,6 +27,8 @@ div class="container"
                 - card[:images].each_with_index do |image, i|
                   div class="carousel-item#{' active' if i == 0}"
                     img [class="d-block w-100" atl="slide-0#{i}"
+                       src="#{image[:s3_url]}"]
+                    /img [class="d-block w-100" atl="slide-0#{i}"
                          src="data:image/jpg;base64, #{image[:data].print(width: 600)}"]
               - if card[:images].count > 1
                 ol class="carousel-indicators"
